Adicionado atributos estudados na aula

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -11,6 +11,8 @@
 </head>
 <body bgcolor="#0088FF"> <!--Inicio do corpo do site-->
     <center> <!--Centro-->
+        <a href="pagina2.html">Página 2</a><!--Link-->
+       
         <h1>Coração</h1><!--Níveis de hierarquias de títulos-->
         <h2>Coração</h2>
         <h3>Coração</h3>
@@ -34,5 +36,32 @@
     </font>
     <font face="arial"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi voluptatem amet excepturi blanditiis accusamus minima mollitia quo vel ducimus atque sint maiores, omnis labore? Expedita dolor cum nostrum itaque eligendi.</p></font>
     
+    <ul type="circle"><!--Lista não ordenada-->
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Macarrão</li>
+        <li>Alface</li>
+        <li>Tomate</li>
+    </ul>
+
+    <ol type="a" start="9"><!--Lista Ordenada-->
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Macarrão</li>
+        <li>Alface</li>
+        <li>Tomate</li>
+    </ol>
+
+    <ol>
+        <li>Primeiro Item</li>
+        <li>Segundo Item
+            <ol>
+                <li>Primeiro Sub-item</li>
+                <li>Segundo Sub-item</li>
+                <li>Terceiro Sub-item</li>
+            </ol>
+        </li>
+        <li>Terceiro Item</li>
+    </ol>
 </body>
 </html>
