Formulário Simples e Estilizado

--- a/menu responsivo/atividades/atividades.html
+++ b/menu responsivo/atividades/atividades.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Atividades</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <a href="/" class="btn-nav">Logomarca</a>
+        <a href="../index.html" class="btn-nav">Logomarca</a>
         <nav>
             <input type="checkbox" id="checkbox" class="checkbox"/>
             <label for="checkbox" class="label-menu"> <span class="hamburguer"></span></label>
             <ul class="menu">
-                <li><a class="btn-nav" href="#">Início</a></li>
+                <li><a class="btn-nav" href="../index.html">Início</a></li>
                 <li><a class="btn-nav" href="/">Arquivos</a></li>
                 <li><a class="btn-nav" href="/">Sobre</a></li>
-                <li><a class="btn-nav" href="atividades/atividades.html">Atividades</a></li>
+                <li><a class="btn-nav" href="#">Atividades</a></li>
                 <li><a class="btn-nav" href="/">Contato</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Página de Atividades</h1>
+        <h2>1 - Formulário</h2>
+        <a href="formularios/formulario1/formulario1.html">Formulário Simples</a><br>
+        <a href="formularios/formulario2/formulario2.html">Formulário Estilizado</a>
+    </main>
 </body>
 </html>
