--- a/menu responsivo/atividades/formularios/formulário4/index.html
+++ b/menu responsivo/atividades/formularios/formulário4/index.html
@@ -38,7 +38,7 @@
 
                 <div class="form-control">
                     <label for="email">Email</label>
-                    <input type="text" id="email" placeholder="Digite seu email" onblur="checkInputs()">
+                    <input type="email" id="email" placeholder="Digite seu email" onblur="checkInputs()">
                     <i class="fas fa-exclamation-circle"></i>
                     <i class="fas fa-check-circle"></i>
                     <small>Mensagem de erro</small>
