--- a/menu_responsivo/atividades/atividades.html
+++ b/menu_responsivo/atividades/atividades.html
@@ -25,8 +25,10 @@
     <main>
         <h1>Página de Atividades</h1>
         <h2>1 - Formulário</h2>
-        <a href="formularios/formulario1/formulario1.html">Formulário Simples</a><br>
-        <a href="formularios/formulario2/formulario2.html">Formulário Estilizado</a>
+        <a href="formularios/formulario1/formulario1.html">Formulário 1</a><br>
+        <a href="formularios/formulario2/formulario2.html">Formulário 2</a><br>
+        <a href="formularios/formulário3/formulario3.html">Formulário 3</a><br>
+        <a href="formularios/formulário4/index.html">Formulário 4</a>
     </main>
 </body>
 </html>
