Criado exercicio javascript

--- a/menu_responsivo/atividades/atividades.html
+++ b/menu_responsivo/atividades/atividades.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atividades</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html" class="btn-nav">Logomarca</a>
-        <nav>
-            <input type="checkbox" id="checkbox" class="checkbox"/>
-            <label for="checkbox" class="label-menu"> <span class="hamburguer"></span></label>
-            <ul class="menu">
-                <li><a class="btn-nav" href="../index.html">Início</a></li>
-                <li><a class="btn-nav" href="/">Arquivos</a></li>
-                <li><a class="btn-nav" href="/">Sobre</a></li>
-                <li><a class="btn-nav" href="#">Atividades</a></li>
-                <li><a class="btn-nav" href="/">Contato</a></li>
-            </ul>
-        </nav>
+      <a href="../index.html" class="btn-nav">Logomarca</a>
+      <nav>
+        <input type="checkbox" id="checkbox" class="checkbox" />
+        <label for="checkbox" class="label-menu">
+          <span class="hamburguer"></span
+        ></label>
+        <ul class="menu">
+          <li><a class="btn-nav" href="../index.html">Início</a></li>
+          <li><a class="btn-nav" href="/">Arquivos</a></li>
+          <li><a class="btn-nav" href="/">Sobre</a></li>
+          <li><a class="btn-nav" href="#">Atividades</a></li>
+          <li><a class="btn-nav" href="/">Contato</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h1>Página de Atividades</h1>
-        <h2>1 - Formulário</h2>
-        <a href="formularios/formulario1/formulario1.html">Formulário 1</a><br>
-        <a href="formularios/formulario2/formulario2.html">Formulário 2</a><br>
-        <a href="formularios/formulário3/formulario3.html">Formulário 3</a><br>
-        <a href="formularios/formulário4/index.html">Formulário 4</a>
+      <h1>Página de Atividades</h1>
+      <h2>1 - Formulário</h2>
+      <a href="formularios/formulario1/formulario1.html">Formulário 1</a><br />
+      <a href="formularios/formulario2/formulario2.html">Formulário 2</a><br />
+      <a href="formularios/formulário3/formulario3.html">Formulário 3</a><br />
+      <a href="formularios/formulário4/index.html">Formulário 4</a>
+      <h2>2 - JavaScript</h2>
+      <a href="JavaScript/js1/index.html">JavaScript</a>
     </main>
-</body>
+  </body>
 </html>
