--- a/menu_responsivo/atividades/atividades.html
+++ b/menu_responsivo/atividades/atividades.html
@@ -33,6 +33,10 @@
       <a href="formularios/formulário4/index.html">Formulário 4</a>
       <h2>2 - JavaScript</h2>
       <a href="JavaScript/js1/index.html">JavaScript</a>
+      <h2>3 - Projeto Android</h2>
+      <a href="https://thiagoalmeidafernandes.github.io/projeto-android/"
+        >Projeto Android</a
+      >
     </main>
   </body>
 </html>
